--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 
 body {
     background-color: #ccae62;
-    background: url(/pictures/bg.jpg);
+    background: url(pictures/bg.jpg);
     text-align: center;
     margin: 0;
     font-family: 'Merriweather', serif;
@@ -26,7 +26,7 @@ p {
 
 form {
     background-color: #84817a;
-    background: url(/pictures/bg-drk.jpg);
+    background: url(pictures/bg-drk.jpg);
     color: ivory;
     max-width: 80%;
     border-style: solid;
